--- a/react-frontend/src/pages/BatchwisePlacement.css
+++ b/react-frontend/src/pages/BatchwisePlacement.css
@@ -41,7 +41,7 @@
   font-weight: bold;
   color: #d80000;
   margin-top: 10px;
-  border: 1px solid red;
+  border: 1px solid #ff8c00;
   border-radius: 20px;
   padding: 4px 8px;
   display: inline-block;
