--- a/react-frontend/src/components/MajorRecruiters.css
+++ b/react-frontend/src/components/MajorRecruiters.css
@@ -33,8 +33,8 @@
 }
 
 .see-more-btn {
-  background-color: #c0392b;
-  color: white;
+  background-color: #ff8c00;
+  color: rgb(15, 14, 14);
   padding: 10px 25px;
   border: none;
   font-weight: bold;
